<resources>
    <string name="app_name">The Premier League</string>

    <!-- Bottom Navigation -->
    <string name="bottom_nav_matches">Matches</string>
    <string name="bottom_nav_teams">Teams</string>
    <string name="bottom_nav_favourites">Favorites</string>
    <string name="search_title">Search…</string>

    <!-- Defaults -->
    <string name="btn_favourites">Add to Favourites</string>
    <string name="favorites">Favorites</string>
    <string name="versus">VS</string>
    <string name="match_date">YYYY-MM-DD</string>
    <string name="match_time">HH:MM</string>
    <string name="home_team_name">Home Team Name</string>
    <string name="away_team_name">Away Team Name</string>
    <string name="home_score">0</string>
    <string name="away_score">0</string>
    <string name="goal_detail">Goal Details</string>
    <string name="event_name">Event Name</string>
    <string name="team_name">Team Name</string>
    <string name="team_year_of_established">YYYY</string>
    <string name="team_stadium">Somewhere</string>
    <string name="team_desc">Team Description</string>
    <string name="lore_ipsum">Lore ipsum</string>
    <string name="player_position">Player Position</string>
    <string name="player_weight">Weight (kg)</string>
    <string name="player_height">Height (m)</string>
    <string name="zero_value">0.00</string>
    <string name="player_description_header">Forward</string>
    <string name="player_description">Lore ipsum</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Defense</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>

    <!-- League List -->
    <array name="league_list">
        <item>English Premier League</item>
        <item>German Bundesliga</item>
        <item>Spanish La Liga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
    </array>

</resources>
