<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="13dp">

        <TextView
            android:id="@+id/match_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingBottom="3dp"
            android:text="@string/match_date"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/match_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingBottom="3dp"
            android:text="@string/match_time"
            android:textColor="@color/colorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="13dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/home_team"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLength="15"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/home_team_name" />

            <TextView
                android:id="@+id/home_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/home_score"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:text="@string/versus"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/away_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/away_score"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/away_team"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLength="15"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/away_team_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingTop="13dp">

            <ImageButton
                android:id="@+id/add_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_reminder"
                android:background="@null"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>