<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="9dp">

    <ImageView
        android:id="@+id/img_player"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_margin="9dp"
        android:src="@mipmap/ic_default_team_badge"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/player_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/player_position"
        android:textColor="@android:color/darker_gray"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="9dp">

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_weight"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/player_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_value"
                android:textColor="@color/colorPrimary"
                android:textSize="48sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_height"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/player_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_value"
                android:textColor="@color/colorPrimary"
                android:textSize="48sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="7dp"
        android:text="@string/player_description_header"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <View
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/player_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:padding="9dp"
            android:text="@string/player_description" />

    </ScrollView>

</LinearLayout>