<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="13dp">

    <TextView
        android:id="@+id/match_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:text="@string/match_date"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/match_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="9dp"
        android:text="@string/match_time"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/home_team_badge"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/ic_default_team_badge"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/home_team_name"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLength="9"
                android:text="@string/home_team_name"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="23dp"
            android:paddingEnd="18dp">

            <TextView
                android:id="@+id/home_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_score"
                android:textSize="36sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/versus"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="18dp"
            android:paddingEnd="23dp">

            <TextView
                android:id="@+id/away_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_score"
                android:textSize="36sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/away_team_badge"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/ic_default_team_badge"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/away_team_name"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLength="9"
                android:text="@string/away_team_name"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="9dp"
        android:background="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="9dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="21dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ListView
                    android:id="@+id/home_goal_details"
                    android:layout_width="140dp"
                    android:layout_height="180dp"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    tools:ignore="NestedScrolling" />

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:gravity="center"
                    android:text="@string/goal_detail"
                    android:textColor="@color/colorPrimary" />

                <ListView
                    android:id="@+id/away_goal_details"
                    android:layout_width="140dp"
                    android:layout_height="180dp"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    tools:ignore="NestedScrolling" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="9dp"
                android:paddingBottom="9dp">

                <TextView
                    android:id="@+id/home_shots"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    android:gravity="center"
                    android:text="@string/zero_value"
                    android:textColor="@color/colorPrimary"
                    tools:ignore="NestedScrolling" />

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:gravity="center"
                    android:text="@string/shots"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/away_shots"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    android:gravity="center"
                    android:text="@string/zero_value"
                    android:textColor="@color/colorPrimary"
                    tools:ignore="NestedScrolling" />

            </LinearLayout>

            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="9dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="9dp"
                android:text="@string/lineups"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="9dp">

                <TextView
                    android:id="@+id/home_goal_keeper"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    android:gravity="center"
                    android:text="@string/zero_value"
                    android:textColor="@color/colorPrimary"
                    tools:ignore="NestedScrolling" />

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:gravity="center"
                    android:text="@string/goal_keeper"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/away_goal_keeper"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    android:gravity="center"
                    android:text="@string/zero_value"
                    android:textColor="@color/colorPrimary"
                    tools:ignore="NestedScrolling" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="9dp">

                <ListView
                    android:id="@+id/home_defense"
                    android:layout_width="140dp"
                    android:layout_height="180dp"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    tools:ignore="NestedScrolling" />

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:gravity="center"
                    android:text="@string/defense"
                    android:textColor="@color/colorPrimary" />

                <ListView
                    android:id="@+id/away_defense"
                    android:layout_width="140dp"
                    android:layout_height="180dp"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    tools:ignore="NestedScrolling" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="9dp">

                <ListView
                    android:id="@+id/home_midfield"
                    android:layout_width="140dp"
                    android:layout_height="180dp"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    tools:ignore="NestedScrolling" />

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:gravity="center"
                    android:text="@string/midfield"
                    android:textColor="@color/colorPrimary" />

                <ListView
                    android:id="@+id/away_midfield"
                    android:layout_width="140dp"
                    android:layout_height="180dp"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    tools:ignore="NestedScrolling" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="9dp">

                <ListView
                    android:id="@+id/home_forward"
                    android:layout_width="140dp"
                    android:layout_height="180dp"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    tools:ignore="NestedScrolling" />

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:gravity="center"
                    android:text="@string/forward"
                    android:textColor="@color/colorPrimary" />

                <ListView
                    android:id="@+id/away_forward"
                    android:layout_width="140dp"
                    android:layout_height="180dp"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    tools:ignore="NestedScrolling" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="9dp">

                <ListView
                    android:id="@+id/home_substitutes"
                    android:layout_width="140dp"
                    android:layout_height="180dp"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    tools:ignore="NestedScrolling" />

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:gravity="center"
                    android:text="@string/substitutes"
                    android:textColor="@color/colorPrimary" />

                <ListView
                    android:id="@+id/away_substitutes"
                    android:layout_width="140dp"
                    android:layout_height="180dp"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    tools:ignore="NestedScrolling" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <android.widget.ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</LinearLayout>